--- a/Topics/Methods and attributes/Stack class/task.html
+++ b/Topics/Methods and attributes/Stack class/task.html
@@ -1,6 +1,7 @@
 <h2>Stack class</h2>
 <p></p>
 <p></p><div class="alert alert-warning">Whoa! This problem is much more complex than the usual one and requires knowledge of Stack (for example, the names of the methods are not random but related to Stack terminology). If you're feeling up to the challenge, brace yourself, and good luck! Otherwise, you can skip it for now and return any time later. </div>
+<p>A stack is a data structure where elements are stored in the order in which they were added. A stack is like a stack of books or plates: you cannot remove any object, only the one that was added last.</p>
 <p>Implement your Stack class in Python. It should wrap several built-in Python data structure and implement the following methods:</p>
 <ul>
 <li><code class="java">push(el)</code>: push a new element <code class="java">el</code> to the stack;</li>
